# physically-based-skinning-of-rigid-bodies

./: .gitignore  CMakeLists.txt  README  README.md
BachelorThesis/: CombinedBody.cpp  CombinedBody.h  Helper.cpp  Helper.h  ObjLoader.cpp  ObjLoader.h  Particle.cpp  Particle.h  ParticleGroup.cpp  ParticleGroup.h  Simulation.cpp  Simulation.h  ViewModel.cpp  ViewModel.h  cube.model  fragment.frag  main.cpp  plane.model  sphere.model  vertex.vert
BachelorThesis.xcodeproj/: project.pbxproj
BachelorThesis.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BachelorThesis.xcodeproj/project.xcworkspace/xcuserdata/eric.xcuserdatad/: UserInterfaceState.xcuserstate
BachelorThesis.xcodeproj/xcuserdata/eric.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
BachelorThesis.xcodeproj/xcuserdata/eric.xcuserdatad/xcschemes/: BachelorThesis.xcscheme  xcschememanagement.plist
code/: CMakeLists.txt  build.sh  run.sh  test.sh
code/CMake/: Common.cmake
code/Common/: Config.h  IDFactory.cpp  IDFactory.h  StringTools.cpp  StringTools.h  timing.cpp  timing.h
code/Math2/: CDMath.cpp  CDMath.h  CMakeLists.txt  Mat.cpp  Mat.h  MatBase.h  MatrixNxM.cpp  MatrixNxM.h  ObjectArray.h  Quaternion.cpp  Quaternion.h  SimMath.cpp  SimMath.h  Vec.cpp  Vec.h  VecBase.h  VectorND.cpp
code/Math2/include/Math2/: CDMath.h  Mat.h  MatBase.h  MathDefs.h  Quaternion.h  Vec.h  VectorND.h
code/Math2/src/: CDMath.cpp  Mat.cpp  MatrixNxM.cpp  Quaternion.cpp  SimMath.cpp  Vec.cpp  VectorND.cpp
code/Simulation/: CMakeLists.txt  ClothModel.cpp  SimulationStep.cpp  TimeManager.h  main.cpp
code/Simulation/shaders/: ColorPassthrough.frag  PosOnlyWorldTransform.vert
code/Simulation/src/: ClothModel.cpp  Constants.h  Contact.cpp  Contact.h  Edge.cpp  Edge.h  Face.cpp  Face.h  Helper.cpp  Helper.h  ObjLoader.cpp  ObjLoader.h  ParticleSystem.cpp  ParticleSystem.h  Polyhedron.cpp  Polyhedron.h  RigidBody.cpp  RigidBody.h  Simulation.cpp  Simulation.h  SimulationStep.cpp  SimulationStep.h  TimeManager.cpp  main.cpp
code/Simulation/test/: main.cpp
code/Visualization/: CMakeLists.txt  MiniGL - Kopie.cpp  MiniGL - Kopie.h  MiniGL.cpp  MiniGL.h
code/Visualization/include/Visualization/: MiniGL.h
code/Visualization/src/: MiniGL.cpp
code/anttweakbar/: CMakeLists.txt
code/anttweakbar/include/: AntTweakBar.h
code/anttweakbar/src/: TwMgr.cpp  TwPrecomp.h
code/freeglut/: README.win32
code/freeglut/include/GL/: freeglut_std.h
code/freeglut/src/: CMakeLists.txt
doc/: abstract.tex  anhanga.tex  bibdatabase.bib  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  chap8.tex  eg-alpha.bst  eid.tex  main.tex
doc/data/: placeholder.txt  rigid_bullet_custom.txt  scenario1_combined.txt  scenario1_rigid.txt  scenario2_combined.txt  scenario2_rigid.txt  scenario3_combined.txt  scenario3_rigid.txt  scenario4_combined.txt  scenario4_combined_old.txt  scenario4_rigid.txt  soft_custom.txt
doc/images/: combined_body_density_1.ai  combined_body_density_2.ai  deformed.ai  deformed_highlight.ai  deformed_move.ai  gsclogo.eps  gsclogofull.eps  oriented_particles_collision_ellipsoid_correct.ai  oriented_particles_collision_ellipsoid_wrong.ai  oriented_particles_collision_sphere.ai  rest.ai  rigid_body_1.ai  scenario1_rigid.mov  scenario2_rigid.mov  scenario3_rigid.mov  scenario4_rigid.mov  shape_matching.ai
docs/: expose.md
src/: combinedbody.cpp  combinedbody.h  constants.h  main.cpp  main.h  particle.cpp  particle.h  particlegroup.cpp  particlegroup.h  simulation.cpp  simulation.h
